--- a/src/Admin/components/Spinner/style.module.scss
+++ b/src/Admin/components/Spinner/style.module.scss
@@ -55,3 +55,18 @@
         transform: rotate(360deg);
     }
 } 
+
+.arcSpinner {
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+    margin-left: var(--givewp-spacing-2);
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
