feature: add test donation tag and fix status colors

--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Records/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Records/styles.module.scss
@@ -76,10 +76,7 @@
         width: 0.75rem;
     }
 
-    &--pending {
-        --statusOptionColor: var(--givewp-orange-500);
-    }
-
+    &--pending,
     &--processing {
         --statusOptionColor: var(--givewp-blue-500);
     }
