--- a/src/Donations/resources/admin/components/DonationDetailsPage/DonationDetailsPage.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/DonationDetailsPage.module.scss
@@ -1,5 +1,4 @@
 .statusBadge {
-    --statusBadgeIconColor: var(--givewp-grey-500);
     --statusBadgeBgColor: var(--givewp-grey-25);
     --statusBadgeTextColor: var(--givewp-grey-900);
 
@@ -16,30 +15,27 @@
     padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
     text-align: center;
 
-    &.statusBadge--pending {
-        --statusBadgeIconColor: var(--givewp-orange-500);
-        --statusBadgeBgColor: var(--givewp-orange-25);
-        --statusBadgeTextColor: var(--givewp-orange-900);
-    }
-
+    &.statusBadge--pending,
     &.statusBadge--processing {
-        --statusBadgeIconColor: var(--givewp-blue-500);
-        --statusBadgeBgColor: var(--givewp-blue-25);
+        --statusBadgeBgColor: var(--givewp-blue-100);
         --statusBadgeTextColor: var(--givewp-blue-900);
     }
 
     &.statusBadge--publish {
-        --statusBadgeIconColor: var(--givewp-green-500);
-        --statusBadgeBgColor: var(--givewp-green-25);
+        --statusBadgeBgColor: var(--givewp-green-100);
         --statusBadgeTextColor: var(--givewp-green-900);
     }
 
     &.statusBadge--failed,
     &.statusBadge--cancelled,
     &.statusBadge--revoked {
-        --statusBadgeIconColor: var(--givewp-red-500);
-        --statusBadgeBgColor: var(--givewp-red-25);
+        --statusBadgeBgColor: var(--givewp-red-100);
         --statusBadgeTextColor: var(--givewp-red-900);
+    }
+
+    &.testBadge {
+        --statusBadgeBgColor: var(--givewp-orange-400);
+        --statusBadgeTextColor: var(--givewp-shades-white);
     }
 }
 
