--- a/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
+++ b/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
@@ -152,10 +152,27 @@
     line-height: 1.5rem;
     text-align: center;
     cursor: pointer;
-    box-sizing: border-box
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    &:before {
+        content: attr(data-text);
+        font-weight: 600;
+        height: 0;
+        visibility: hidden;
+        overflow: hidden;
+        user-select: none;
+        pointer-events: none;
+        speak: none;
+    }
 }
 
 @media screen and (min-width: 48rem) {
+
     .tabs [data-reach-tab],
     .tabs [role='tab'] {
         font-size: 1rem;
