feature: add frequency indicator to page title

--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/SubscriptionDetailsPage.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/SubscriptionDetailsPage.module.scss
@@ -1,3 +1,8 @@
+.period {
+    color: var(--givewp-neutral-500);
+    font-size: 1.125rem;
+}
+
 .statusBadge {
     --statusBadgeBgColor: var(--givewp-grey-25);
     --statusBadgeTextColor: var(--givewp-grey-900);
