feature: add footer to confirmation modal

--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/SubscriptionDetailsPage.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/SubscriptionDetailsPage.module.scss
@@ -52,3 +52,21 @@
     display: flex;
     gap: var(--givewp-spacing-2);
 }
+
+.syncModalFooter {
+    display: flex;
+    align-items: center;
+    gap: var(--givewp-spacing-2);
+    margin-top: var(--givewp-spacing-2);
+    padding: var(--givewp-spacing-3) var(--givewp-spacing-4);
+    background-color: #f2f9ff;
+    border-top: solid 1px #0c7ff2;
+    border-right: solid 1px #0c7ff2;
+    border-bottom: solid 1px #0c7ff2;
+    border-left: solid 4px #0c7ff2;
+    border-radius: 4px;
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.43;
+    color: #001326;
+}
