--- a/src/Campaigns/Blocks/shared/styles/donate-button.scss
+++ b/src/Campaigns/Blocks/shared/styles/donate-button.scss
@@ -17,7 +17,7 @@
     width: 100%;
 
     &:hover, &:focus, &:active, &:focus-visible {
-        background-color: color-mix(in srgb, var(--givewp-primary-color), black 20%);
+        background-color: color-mix(in srgb, var(--givewp-primary-color, #2271b1), black 20%);
     }
 }
 
