refactor: better handle accurate rows

--- a/src/Subscriptions/resources/admin/components/SubscriptionSyncList/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionSyncList/styles.module.scss
@@ -56,13 +56,13 @@
     line-height: 1.5;  
     padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
     border-radius: 12px;
-    background-color: #cef2cf;
-    color: #022603;
-}
-
-.itemUpdated {
     background-color: #beb6f2;
     color: #03001a;
+}
+
+.itemAccurate {
+    background-color: #cef2cf;
+    color: #022603;
 }
 
 .itemButton {
