fix: include missing gateway details

--- a/src/Subscriptions/resources/admin/components/SubscriptionSyncList/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionSyncList/styles.module.scss
@@ -107,7 +107,7 @@
     justify-content:space-between;
     gap: var(--givewp-spacing-2);
     align-items: center;
-    width: 100%;
+    width: auto;
     border-radius: .5rem;
     background-color: #f9fafb;
 }
