--- a/src/Admin/components/Header/styles.module.scss
+++ b/src/Admin/components/Header/styles.module.scss
@@ -17,7 +17,7 @@
 
 .headerText {
     margin: 0;
-    color: #060c1a;
+    color: #1f2937;
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
