refactor: update payment details to accept donation data

--- a/src/Admin/components/PaymentDetails/styles.module.scss
+++ b/src/Admin/components/PaymentDetails/styles.module.scss
@@ -41,7 +41,7 @@
     justify-content: flex-start;
   }
 
-  .campaignCard div, .donorCard div {
+  .campaignCard div, .donorCard div, .card div {
     margin: 0 auto;
   }
   
