--- a/src/Admin/components/StatWidget/styles.module.scss
+++ b/src/Admin/components/StatWidget/styles.module.scss
@@ -144,6 +144,11 @@
     border-radius: var(--givewp-rounded-8);
 }
 
+.spinnerContainer {
+    display: flex;
+    margin: 0 auto;
+}
+
 
 @media (max-width: 900px) {
     .statWidgetAmount {
