--- a/src/Campaigns/Blocks/shared/styles/donate-button.scss
+++ b/src/Campaigns/Blocks/shared/styles/donate-button.scss
@@ -1,6 +1,6 @@
 .givewp-donation-form-link,
 .givewp-donation-form-modal__open {
-    color: var(--givewp-secondary-color, #ffffff);
+    color: #ffffff;
     background: var(--givewp-primary-color, #2271b1);
     padding: 0.75rem 1.25rem !important;
     cursor: pointer;
