--- a/src/ThirdPartySupport/Elementor/Widgets/V2/ElementorDonationFormWidget/resources/widget.scss
+++ b/src/ThirdPartySupport/Elementor/Widgets/V2/ElementorDonationFormWidget/resources/widget.scss
@@ -2,7 +2,7 @@
 .elementor-widget {
     .givewp-donation-form-link,
     .givewp-donation-form-modal__open {
-        color: var(--givewp-secondary-color, #ffffff);
+        color: #ffffff;
         background: var(--givewp-primary-color, #2271b1);
         padding: 0.75rem 1.25rem !important;
         cursor: pointer;
