--- a/src/Views/Components/ListTable/TableCell/TableCell.module.scss
+++ b/src/Views/Components/ListTable/TableCell/TableCell.module.scss
@@ -75,7 +75,7 @@
 
 :global(.list-table-page-container--new-design) {
     .tableCell {
-        padding-block: var(--givewp-spacing-6);
+        padding-block: var(--givewp-spacing-2) var(--givewp-spacing-10);
         padding-inline: var(--givewp-spacing-2);
         color: var(--givewp-neutral-700);
         font-size: 1rem;
@@ -88,6 +88,18 @@
 
         &:last-child {
             padding-inline-end: var(--givewp-spacing-6);
+        }
+    }
+
+    tr:first-child {
+        .tableCell {
+            padding-block-start: var(--givewp-spacing-6);
+        }
+    }
+
+    tr:last-child {
+        .tableCell {
+            padding-block-end: var(--givewp-spacing-6);
         }
     }
 }
