feature: add loading state to submit button and sample promise to simulate request

--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Donations/AddRenewalModal/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Donations/AddRenewalModal/styles.module.scss
@@ -165,6 +165,10 @@
         .addButton {
             padding: var(--givewp-spacing-4) var(--givewp-spacing-8);
         }
+
+        &.loading {
+            pointer-events: none;
+        }
     }
 
     .note {
