--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -16,7 +16,7 @@
 
 .paymentMethod {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   gap: var(--givewp-spacing-2);
 }
 
@@ -59,4 +59,35 @@
   font-weight: 500;
   text-transform: none;
   letter-spacing: 0.05em;
+}
+
+.notice {
+  display: flex;
+  gap: var(--givewp-spacing-2);
+  padding: var(--givewp-spacing-3) var(--givewp-spacing-4);
+  border-radius: var(--givewp-radius-md);
+  background-color: #f2f9ff;
+}
+
+.noticeContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: var(--givewp-spacing-1);
+}
+
+.noticeTitle{
+  font-size: 0.875rem;
+  font-weight: 600;
+  line-height: 1.43;
+  color: #001326;
+
+}
+
+.noticeDescription {
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.43;
+  color: #001326;
+
 }
