--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -1,85 +1,22 @@
-.overviewPanel {
-  height: auto;
-  min-height: fit-content;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  margin: 0;
-  width: 100%;
-  height: auto;
-  min-height: fit-content;
-}
-
-.section {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 0 !important;
-  padding: 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--givewp-spacing-2);
-  width: 100%;
-  height: auto;
-  background: var(--givewp-shades-white);
-  border: 1px solid var(--givewp-neutral-50);
-  border-radius: 0.5rem;
-  padding: var(--givewp-spacing-4);
-}
-
-.donorCard {
-  gap: var(--givewp-spacing-1);
-
-  .donorLink {
-    margin-top: var(--givewp-spacing-1);
-  }
-}
-
-.campaignCard {
-  justify-content: flex-start;
-}
-
-.card h3 {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  color: var(--givewp-neutral-700);
-  margin: 0;
-}
-
-.card p {
-  margin: 0 0 0.5rem 0;
-  color: var(--givewp-gray-900);
-}
-
-.card p:last-child {
-  margin-bottom: 0;
-}
 
 .campaignLink, .donorLink {
-  height: 1.75rem;
   align-self: stretch;
-  flex-grow: 0;
-  font-family: Inter;
   font-size: 1.125rem;
   font-weight: 600;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.56;
-  letter-spacing: normal;
-  text-align: left;
   text-decoration: none;
+}
+
+.campaignLink:hover {
+  text-decoration: underline;
+}
+
+.donorLink {
+  margin-top: var(--givewp-spacing-1);
 }
 
 .paymentMethod {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   gap: var(--givewp-spacing-2);
 }
 
@@ -90,11 +27,11 @@
   width: 100%;
 }
 
-
 .gatewayLink {
   display: flex;
   align-items: center;
   gap: var(--givewp-spacing-2);
+  margin-top: var(--givewp-spacing-1);
   font-family: Inter;
   font-size: 0.875rem;
   font-weight: 500;
@@ -103,10 +40,6 @@
   line-height: 1.43;
   letter-spacing: normal;
   text-align: center;
-}
-
-.campaignLink:hover {
-  text-decoration: underline;
 }
 
 .date {
@@ -126,4 +59,35 @@
   font-weight: 500;
   text-transform: none;
   letter-spacing: 0.05em;
+}
+
+.notice {
+  display: flex;
+  gap: var(--givewp-spacing-2);
+  padding: var(--givewp-spacing-3) var(--givewp-spacing-4);
+  border-radius: var(--givewp-radius-md);
+  background-color: #f2f9ff;
+}
+
+.noticeContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: var(--givewp-spacing-1);
+}
+
+.noticeTitle{
+  font-size: 0.875rem;
+  font-weight: 600;
+  line-height: 1.43;
+  color: #001326;
+
+}
+
+.noticeDescription {
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.43;
+  color: #001326;
+
 }
