--- a/src/Admin/components/PrivateNotes/style.module.scss
+++ b/src/Admin/components/PrivateNotes/style.module.scss
@@ -56,6 +56,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 8px;
+    min-height: 4.5rem;
     padding: 0.75rem 1rem;
     border-radius: 4px;
     border: solid 1px #e5e7eb;
@@ -64,6 +65,15 @@
     &:hover {
         background-color: #f9fafb;
     }
+}
+
+.noteLoading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    margin: auto;
 }
 
 .note {
