--- a/src/Admin/components/PrivateNotes/style.module.scss
+++ b/src/Admin/components/PrivateNotes/style.module.scss
@@ -106,6 +106,8 @@
     cursor: pointer;
     top: 0.5rem;
     right: 0.75rem;
+    background: none;
+    border: none;
 }
 
 .menu {
@@ -133,6 +135,8 @@
         font-weight: 500;
         line-height: 1.43;
         color: var(--givewp-neutral-700);
+        background: none;
+        border: none;
 
 
         &:hover {
