fix: compensate border width on subscription donation type badge and fix table border color

--- a/src/Views/Components/ListTable/InterweaveSSR/styles.scss
+++ b/src/Views/Components/ListTable/InterweaveSSR/styles.scss
@@ -150,14 +150,17 @@
     }
 
     .subscriptionDonationTypeBadge {
+        --border-width: 1px;
+        --padding-x: calc(var(--givewp-spacing-3) - var(--border-width));
+        --padding-y: calc(var(--givewp-spacing-1) - var(--border-width));
         align-items: center;
         background-color: var(--givewp-neutral-25);
         border-radius: 1.5rem;
-        border: 1px solid var(--givewp-neutral-600);
+        border: var(--border-width) solid var(--givewp-neutral-600);
         color: var(--givewp-neutral-900);
         display: inline-flex;
         justify-content: center;
-        padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
+        padding: var(--padding-y) var(--padding-x);
 
         p {
             font-size: 0.75rem;
