fix: adjust styles of items in the summary grid

--- a/src/Admin/components/SummaryTable/styles.module.scss
+++ b/src/Admin/components/SummaryTable/styles.module.scss
@@ -36,4 +36,5 @@ $breakpoint-desktop: 900px;
   line-height: 1.5;
   color: #1f2937;
   padding: var(--givewp-spacing-3) 0;
+  text-align: right;
 }
