--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Overview/SubscriptionSummaryGrid/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Overview/SubscriptionSummaryGrid/styles.module.scss
@@ -1,8 +1,11 @@
 
 .paymentMethod {
-  display: flex;
   align-items: center;
+  display: flex;
+  font-size: 1.125rem;
+  font-weight: 600;
   gap: var(--givewp-spacing-2);
+  line-height: calc(28 / 18);
 }
 
 .donationType {
@@ -12,23 +15,10 @@
   width: 100%;
 }
 
-.gatewayLink {
-  display: flex;
-  align-items: center;
-  gap: var(--givewp-spacing-2);
-  font-family: Inter;
-  font-size: 0.875rem;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-}
-
 .date {
   font-weight: 500;
   font-size: 1.125rem;
+  line-height: calc(28 / 18);
   color: var(--givewp-neutral-900);
 }
 
@@ -49,13 +39,7 @@
   font-style: normal;
   line-height: 1.43;
   letter-spacing: normal;
-  text-align: center;
-}
-
-.date {
-  font-weight: 500;
-  font-size: 1.125rem;
-  color: var(--givewp-neutral-900);
+  text-align: left;
 }
 
 .badge {
