--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Overview/SubscriptionSummary/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Overview/SubscriptionSummary/styles.module.scss
@@ -3,6 +3,10 @@
     font-weight: 600;
     line-height: 1.5;
     text-align: right;
-    color: #2271b1; 
+    color: #2271b1;
     text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
