Fix: Design review followup for subscription details admin page (#8076)

--- a/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Overview/SubscriptionSummaryGrid/styles.module.scss
+++ b/src/Subscriptions/resources/admin/components/SubscriptionDetailsPage/Tabs/Overview/SubscriptionSummaryGrid/styles.module.scss
@@ -1,8 +1,11 @@
 
 .paymentMethod {
-  display: flex;
   align-items: center;
+  display: flex;
+  font-size: 1.125rem;
+  font-weight: 600;
   gap: var(--givewp-spacing-2);
+  line-height: calc(28 / 18);
 }
 
 .donationType {
@@ -12,37 +15,11 @@
   width: 100%;
 }
 
-.gatewayLink {
-  display: flex;
-  align-items: center;
-  gap: var(--givewp-spacing-2);
-  font-family: Inter;
-  font-size: 0.875rem;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-}
-
 .date {
   font-weight: 500;
   font-size: 1.125rem;
+  line-height: calc(28 / 18);
   color: var(--givewp-neutral-900);
-}
-
-.badge {
-  display: block;
-  margin-top: var(--givewp-spacing-2);
-  color: var(--givewp-neutral-900);
-  border: 1px solid var(--givewp-neutral-900);
-  padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
-  border-radius: 9999px;
-  font-size: 0.75rem;
-  font-weight: 500;
-  text-transform: none;
-  letter-spacing: 0.05em;
 }
 
 .gatewayCard {
@@ -62,36 +39,21 @@
   font-style: normal;
   line-height: 1.43;
   letter-spacing: normal;
-  text-align: center;
-}
-
-.date {
-  font-weight: 500;
-  font-size: 1.125rem;
-  color: var(--givewp-neutral-900);
+  text-align: left;
 }
 
 .badge {
-  display: block;
-  margin-top: var(--givewp-spacing-2);
-  color: var(--givewp-neutral-900);
+  align-items: center;
+  border-radius: var(--givewp-rounded-full);
   border: 1px solid var(--givewp-neutral-900);
-  padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
-  border-radius: 9999px;
+  color: var(--givewp-neutral-900);
+  display: flex;
   font-size: 0.75rem;
-  font-weight: 500;
-  text-transform: none;
-  letter-spacing: 0.05em;
-
-  &.limited, &.unlimited {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    padding: 4px 12px;
-    border-radius: 24px;
-  }
+  font-weight: 600;
+  gap: var(--givewp-spacing-1);
+  justify-content: center;
+  line-height: 1.5;
+  padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
 
   &.limited {
     color: #d98715;
