chore: initial commit

--- a/src/Views/Components/ListTable/ListTable/ListTable.module.scss
+++ b/src/Views/Components/ListTable/ListTable/ListTable.module.scss
@@ -250,6 +250,7 @@
     }
 }
 
+// TODO: Replace these styles in the current list table implementation
 :global(.list-table-page-container--new-design) {
     .table {
         border-radius: 4px;
