--- a/src/Admin/components/StatWidget/styles.module.scss
+++ b/src/Admin/components/StatWidget/styles.module.scss
@@ -78,7 +78,7 @@
     }
 
     &::after {
-        content: attr(data-feerecovery-tooltip);
+        content: attr(data-addon-tooltip);
         position: absolute;
         right: -2.5rem;
         bottom: calc(100% + 0.625rem);
