--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -39,8 +39,8 @@
 
 .page {
     box-sizing: border-box;
-    color: #333;
-    font-family: Open Sans, system-ui, sans-serif;
+    color: var(--givewp-neutral-900);
+    font-family: Inter, system-ui, sans-serif;
     font-size: 1rem;
 
     *,
@@ -51,18 +51,32 @@
 }
 
 .pageHeader {
+    align-items: center;
+    background-color: var(--givewp-shades-white);
+    border-bottom: 1px solid var(--givewp-neutral-100);
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    gap: var(--givewp-spacing-4);
     justify-content: space-between;
-    gap: 1rem;
-    background-color: #fff;
-    padding-block: 1em;
-    padding-inline: 1.5em;
-    border-bottom: 0.0625rem solid #dbdbdb;
+    padding: var(--givewp-spacing-7) var(--givewp-spacing-6);
+    position: sticky;
+    top: 2rem;
+    z-index: 100;
 
     & > * {
         flex-shrink: 0;
+    }
+
+    .testModeBadge {
+        background: var(--givewp-orange-400);
+        border-radius: var(--givewp-rounded-8);
+        color: var(--givewp-shades-white);
+        font-size: 0.875rem;
+        font-weight: 700;
+        line-height: 1.43;
+        margin-left: var(--givewp-spacing-2);
+        padding: var(--givewp-spacing-1) var(--givewp-spacing-2);
+        text-transform: uppercase;
     }
 }
 
@@ -70,21 +84,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1rem;
+    gap: var(--givewp-spacing-2);
     flex-wrap: wrap;
-
-    & > span {
-        padding-inline: 0.5rem;
-        padding-block: 0.185rem;
-        background: #f49420;
-        border-radius: 5px;
-        font-size: 0.7rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 0.04rem;
-        transform: translateY(0.075rem);
-        color: #ffffff;
-    }
 }
 
 .flexRow:not(:first-child) {
@@ -118,10 +119,11 @@ ul[role='document'] + .flexRow {
 }
 
 .pageTitle {
-    color: #424242;
-    margin: 0;
+    color: var(--givewp-neutral-900);
     font-size: 1.5rem;
-    font-weight: 600;
+    font-weight: 700;
+    line-height: 1.5;
+    margin: 0;
 }
 
 .pageContent {
