--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -5,6 +5,7 @@
     }
 
     .post-type-give_forms #wpbody {
+        -webkit-font-smoothing: antialiased;
         box-sizing: border-box;
 
         & > a {
@@ -159,14 +160,13 @@ ul[role='document'] + .flexRow {
 }
 
 .pageActions {
+    align-items: center;
+    column-gap: 2rem;
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    align-items: center;
     justify-content: space-between;
-    margin-block-end: 0.5rem;
-    margin-block-start: 0.5rem;
-    column-gap: 2rem;
+    margin-top: var(--givewp-spacing-2);
+    width: 100%;
 
     & > * {
         flex-shrink: 0;
@@ -394,6 +394,10 @@ ul[role='document'] + .flexRow {
     padding-block: 1em;
     border-bottom: 0.0625rem solid #dbdbdb;
     margin-bottom: 1rem;
+
+    .pageActions {
+        margin-top: 0;
+    }
 }
 
 
@@ -572,17 +576,5 @@ ul[role='document'] + .flexRow {
 @media (prefers-reduced-motion: reduce) {
     .container {
         animation: none;
-    }
-}
-
-:global(.list-table-page-container--new-design) {
-    .page {
-        font-family: 'Inter', system-ui, sans-serif;
-    }
-
-    .pageActions {
-        justify-content: space-between;
-        margin-block-start: var(--givewp-spacing-6);
-        margin-block-end: var(--givewp-spacing-4);
     }
 }
