--- a/src/Views/Components/ListTable/TableCell/TableCell.module.scss
+++ b/src/Views/Components/ListTable/TableCell/TableCell.module.scss
@@ -1,12 +1,12 @@
 .tableCell {
+    color: var(--givewp-neutral-700);
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5;
+    padding-block: var(--givewp-spacing-2) var(--givewp-spacing-10);
+    padding-inline: var(--givewp-spacing-2);
     position: relative;
-    padding-block-start: 1em;
-    padding-block-end: 2.75em;
-    padding-inline: 1em;
     vertical-align: middle;
-    font-size: 0.875em;
-    font-weight: 600;
-    color: #333;
 
     & a {
         text-decoration: none;
@@ -17,10 +17,32 @@
         }
     }
 
+    &:first-child {
+        padding-inline-start: var(--givewp-spacing-6);
+    }
+
+    &:last-child {
+        padding-inline-end: var(--givewp-spacing-6);
+    }
+
     input[type="checkbox"] {
         margin: 0;
         padding: 0;
         transform: translateY(-1px);
+    }
+
+    :root {
+        tr:first-child {
+            .tableCell {
+                padding-block-start: var(--givewp-spacing-6);
+            }
+        }
+
+        tr:last-child {
+            .tableCell {
+                padding-block-end: var(--givewp-spacing-12);
+            }
+        }
     }
 }
 
@@ -71,35 +93,4 @@
     content: '#';
     font-size: 0.615em;
     padding-inline-end: 0.25em;
-}
-
-:global(.list-table-page-container--new-design) {
-    .tableCell {
-        padding-block: var(--givewp-spacing-2) var(--givewp-spacing-10);
-        padding-inline: var(--givewp-spacing-2);
-        color: var(--givewp-neutral-700);
-        font-size: 1rem;
-        font-weight: 500;
-        line-height: 1.5;
-
-        &:first-child {
-            padding-inline-start: var(--givewp-spacing-6);
-        }
-
-        &:last-child {
-            padding-inline-end: var(--givewp-spacing-6);
-        }
-    }
-
-    tr:first-child {
-        .tableCell {
-            padding-block-start: var(--givewp-spacing-6);
-        }
-    }
-
-    tr:last-child {
-        .tableCell {
-            padding-block-end: var(--givewp-spacing-12);
-        }
-    }
 }
