--- a/src/Views/Components/ListTable/ListTableStats/styles.module.scss
+++ b/src/Views/Components/ListTable/ListTableStats/styles.module.scss
@@ -8,7 +8,7 @@
 .tableStatWidget {
     height: 7.75rem;
     border-radius: 8px;
-    border: solid 1px #f3f4f6;
+    border: solid 1px var(--givewp-neutral-50);
 
     :global(a[data-addon-tooltip])::after {
         right: -2rem;
