feature: style filter row

--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -359,11 +359,9 @@ ul[role='document'] + .flexRow {
     gap: 1rem 1.5rem;
     align-items: center;
     justify-content: flex-start;
-    background-color: rgba(248, 248, 248);
-    padding-inline: 1.5em;
-    padding-block: 1em;
-    border-bottom: 0.0625rem solid #dbdbdb;
-    margin-bottom: 1rem;
+    margin: 0 var(--givewp-spacing-6);
+    padding: var(--givewp-spacing-6) var(--givewp-spacing-6) var(--givewp-spacing-2) var(--givewp-spacing-6);
+    background-color: var(--givewp-shades-white);
 }
 
 
