--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -353,7 +353,7 @@ ul[role='document'] + .flexRow {
     }
 }
 
-.searchContainer {
+.filtersContainer {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem 1.5rem;
