refactor: implement custom select across multiple filters

--- a/src/Views/Components/ListTable/BulkActions/BulkActionSelect.module.scss
+++ b/src/Views/Components/ListTable/BulkActions/BulkActionSelect.module.scss
@@ -14,8 +14,9 @@
     align-items: center;
     font-size: 0.875rem;
     font-weight: 500;
+    min-width: 150px;
+    cursor: pointer;
 }
-
 .apply {
     width: 4.438rem;
     height: 2.25rem;
