--- a/src/Views/Components/ListTable/ListTableRows/ListTableRows.module.scss
+++ b/src/Views/Components/ListTable/ListTableRows/ListTableRows.module.scss
@@ -85,6 +85,12 @@ tr.duplicated {
     & .end {
         text-align: end;
     }
+
+    &:first-child {
+        > * {
+            padding-top: var(--givewp-spacing-6);
+        }
+    }
 }
 
 .donationStatus {
