--- a/src/Views/Components/ListTable/ProductRecommendations/style.module.scss
+++ b/src/Views/Components/ListTable/ProductRecommendations/style.module.scss
@@ -1,13 +1,18 @@
+.productRecommendationRow {
+    + tr > * {
+        padding-top: var(--givewp-spacing-6);
+    }
+}
+
 .productRecommendation {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     padding: .5rem .875rem;
-    background: #F9F9F9;
+    background: var(--givewp-neutral-50);
     font-size: 0.875rem;
-    color: #707070;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
+    color: var(--givewp-neutral-900);
 
 
     .container {
